Layout bug fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -33,6 +33,9 @@ header {
 
 
   h1 {
+    // margin-top: 35px;
+    position: relative;
+    top: 25px;
     text-align: center;
     font-size: 25px;
   }
